# beauty-list

./: Cargo.toml  LICENSE  README.md
src/: main.rs
